# my-llvm-learn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
funcblockcount/: CMakeLists.txt  funcblockcount.cpp
reassociate/: CMakeLists.txt  Reassociate.cpp
tests/: IR示例.ll  test_for_funcblockCount.bc  test_for_funcblockCount.c  test_for_funcblockCount.ll  test_for_funcblockCount.s  test_funcblockcount.sh  test_reassociate.sh
